fix(docs): add some whitespace under hero CTA button

--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -11,3 +11,8 @@
 .image-wrapper {
     overflow: auto!important;
 }
+
+/* add some whitespace under hero CTA button */
+.md-main__inner {
+    padding-bottom: 1rem;
+}
